# tin-can

./: .gitignore  Brewfile  Cargo.toml  Makefile  README.md  build.rs
scripts/: install.sh
src/: audio.rs  chat.rs  cli.rs  ice.rs  main.rs  morse.rs  peer.rs  relay.rs  signal.rs  ui.rs
