[package]
name = "tin-can"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tin-can"
path = "src/main.rs"

[dependencies]
str0m = "0.18"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cpal = { version = "0.17", optional = true }
opus = { version = "0.3", optional = true }

[features]
voice = ["dep:cpal", "dep:opus"]
